Resolve the overflow horizontal scroll

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,6 +3,8 @@
 
 body {
     background-color: #fff;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 .fa-solid, .fas {
